--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,7 +7,7 @@
 <body>
     <div> 
         <nav class="navbar navbar-black bg-primary" style="color: aliceblue;">
-            <h2>footer.ejs</h2>
+            <h2>Thịnh đẹp trai dô địch</h2>
           </nav>
     </div>
 </body>
