--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,25 +1,42 @@
 <!-- header.ejs -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg" style="background-color: #ff7f7f;">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/list">User</a>
-                </li>
-            </ul>
-        </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/list">List User</a>
+          </li>
+        </ul>
+        <% if (!user) { %><a class="nav-link text-white" href="/register">Tạo tài khoản User</a><% } %>
+        <ul class="navbar-nav">
+          <% if (user) { %>
+            <li class="nav-item">
+              <span class="text-white me-3">Xin chào: <%= user.username %></span>
+            </li>
+            <li class="nav-item">
+              <form action="/logout" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger btn-sm">Đăng xuất</button>
+              </form>
+            </li>
+          <% } else { %>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/login">Đăng nhập</a>
+            </li>
+          <% } %>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
