--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -37,6 +37,15 @@
                     <input type="email" class="form-control" id="email" name="email" placeholder="Nhập email" required />
                 </div>
                 <div class="mb-3">
+                    <label for="sex" class="form-label">Giới Tính</label>
+                    <select class="form-select" id="role" name="role" required>
+                        <option value="" disabled selected>Chọn</option>
+                        <option value="Male">Nam</option>
+                        <option value="Famale">Nữ</option>
+                        <option value="Other">Khác</option>
+                    </select>
+                </div>
+                <div class="mb-3">
                     <label for="role" class="form-label">Vai trò</label>
                     <select class="form-select" id="role" name="role" required>
                         <option value="" disabled selected>Chọn vai trò</option>
