--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,6 +19,12 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="/list">List User</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/listproduct">List Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/listcategories">List Categories</a>
+          </li>
         </ul>
         <% if (!user) { %><a class="nav-link text-white" href="/register">Tạo tài khoản User</a><% } %>
         <ul class="navbar-nav">
