--- a/views/products/listproduct.ejs
+++ b/views/products/listproduct.ejs
@@ -11,6 +11,25 @@
     <div class="container mt-4">
         <h1>Danh sách Sản Phẩm</h1>
 
+        <!-- Hiển thị nhóm sản phẩm -->
+        <div class="mb-3">
+            <a href="/listproduct/category">Hiển thị sản phẩm theo loại</a>
+            <% if (data.props.nhom && data.props.nhom.length > 0) { %>
+                <div class="btn-group flex-wrap" role="group">
+                    <% data.props.nhom.forEach(function(categories, index) { %>
+                        <a href="/listproduct/category?category=<%= categories.idnhom %>" 
+                           class="btn btn-outline-primary btn-lg me-2 mb-2" 
+                           title="Xem sản phẩm trong nhóm <%= categories.ten %>">
+                           <%= categories.ten %>
+                        </a>
+                    <% }); %>
+                </div>
+            <% } %>
+        </div>
+        
+        
+        
+
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -57,7 +76,6 @@
             </tbody>
         </table>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
