--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danh sách Sản Phẩm</title>
+    <title>Danh sách Loại</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <div class="container mt-4">
-        <h1>Danh sách Sản Phẩm</h1>
+        <h1>Danh sách Loại</h1>
 
         <table class="table table-bordered">
             <thead>
@@ -29,7 +29,7 @@
                             <td><%= categories.ten %></td> 
                             
                             <td>
-                                <a href="/detail/<%= categories.idnhom %>" class="btn btn-outline-secondary" title="Xem chi tiết">
+                                <a href="/listproduct/category?category=<%= categories.idnhom %>" class="btn btn-outline-secondary" title="Xem chi tiết">
                                     <i class="fa-regular fa-eye"></i>
                                 </a>
                                 <a href="/edit/<%= categories.idnhom %>" class="btn btn-outline-primary" title="Chỉnh sửa" style="color: aqua;">
